[package]
name = "procdump"
version = "0.2.0"
authors = ["Andrew Chin <achin@eminence32.net>"]
description = "A console program to display detailed information about a running process"
homepage = "https://github.com/eminence/procdump"
repository = "https://github.com/eminence/procdump"
readme = "README.md"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
procfs = { version = "0.15.1" }
terminal_size = "0.2"
libc = "0.2"
tui = { version = "0.19", default-features = false, features = ["crossterm"] }
log = "0.4"
anyhow = "1"
chrono = "0.4"
backtrace = {version = "0.3.40", optional = true}
indexmap = "1"
crossterm = "0.26.0"

